--- a/index.html
+++ b/index.html
@@ -11,6 +11,49 @@
   <title>Document</title>
 </head>
 <body>
-
+  <div class="container clearfix">
+    <div class="col-1"><div class="center-txt">1 col</div></div>
+    <div class="col-1"><div class="center-txt">1 col</div></div>
+    <div class="col-1"><div class="center-txt">1 col</div></div>
+    <div class="col-1"><div class="center-txt">1 col</div></div>
+    <div class="col-1"><div class="center-txt">1 col</div></div>
+    <div class="col-1"><div class="center-txt">1 col</div></div>
+    <div class="col-1"><div class="center-txt">1 col</div></div>
+    <div class="col-1"><div class="center-txt">1 col</div></div>
+    <div class="col-1"><div class="center-txt">1 col</div></div>
+    <div class="col-1"><div class="center-txt">1 col</div></div>
+    <div class="col-1"><div class="center-txt">1 col</div></div>
+    <div class="col-1"><div class="center-txt">1 col</div></div>
+  </div>
+  <div class="container clearfix">
+    <div class="col-12"><div class="center-txt">12 col</div></div>
+  </div>
+  <div class="container clearfix">
+    <div class="col-8"><div class="center-txt">8 col</div></div>
+    <div class="col-2"><div class="center-txt">2 col</div></div>
+    <div class="col-2"><div class="center-txt">2 col</div></div>
+  </div>
+  <div class="container clearfix">
+    <div class="col-1"><div class="center-txt">1 col</div></div>
+    <div class="col-2"><div class="center-txt">2 col</div></div>
+    <div class="col-2"><div class="center-txt">2 col</div></div>
+    <div class="col-6"><div class="center-txt">6 col</div></div>
+    <div class="col-1"><div class="center-txt">1 col</div></div>
+  </div>
+  <div class="container clearfix">
+    <div class="col-6">
+      <div class="container container-nested clearfix">
+        <div class="col-2 nested"><div class="center-txt">Nested 2 col</div></div>
+        <div class="col-2 nested"><div class="center-txt">Nested 2 col</div></div>
+        <div class="col-8 nested"><div class="center-txt">Nested 8 col</div></div>
+      </div>
+    </div>
+    <div class="col-6">
+      <div class="container container-nested clearfix">
+        <div class="col-6 nested"><div class="center-txt">Nested 6 col</div></div>
+        <div class="col-6 nested"><div class="center-txt">Nested 6 col</div></div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
