--- a/index.html
+++ b/index.html
@@ -12,46 +12,46 @@
 </head>
 <body>
   <div class="container clearfix">
-    <div class="col-1"><div class="center-txt">1 col</div></div>
-    <div class="col-1"><div class="center-txt">1 col</div></div>
-    <div class="col-1"><div class="center-txt">1 col</div></div>
-    <div class="col-1"><div class="center-txt">1 col</div></div>
-    <div class="col-1"><div class="center-txt">1 col</div></div>
-    <div class="col-1"><div class="center-txt">1 col</div></div>
-    <div class="col-1"><div class="center-txt">1 col</div></div>
-    <div class="col-1"><div class="center-txt">1 col</div></div>
-    <div class="col-1"><div class="center-txt">1 col</div></div>
-    <div class="col-1"><div class="center-txt">1 col</div></div>
-    <div class="col-1"><div class="center-txt">1 col</div></div>
-    <div class="col-1"><div class="center-txt">1 col</div></div>
+    <div class="col-lg-1 col-md-1 col-xs-1"><div class="center-txt">1 col</div></div>
+    <div class="col-lg-1 col-md-1 col-xs-1"><div class="center-txt">1 col</div></div>
+    <div class="col-lg-1 col-md-1 col-xs-1"><div class="center-txt">1 col</div></div>
+    <div class="col-lg-1 col-md-1 col-xs-1"><div class="center-txt">1 col</div></div>
+    <div class="col-lg-1 col-md-1 col-xs-1"><div class="center-txt">1 col</div></div>
+    <div class="col-lg-1 col-md-1 col-xs-1"><div class="center-txt">1 col</div></div>
+    <div class="col-lg-1 col-md-1 col-xs-1"><div class="center-txt">1 col</div></div>
+    <div class="col-lg-1 col-md-1 col-xs-1"><div class="center-txt">1 col</div></div>
+    <div class="col-lg-1 col-md-1 col-xs-1"><div class="center-txt">1 col</div></div>
+    <div class="col-lg-1 col-md-1 col-xs-1"><div class="center-txt">1 col</div></div>
+    <div class="col-lg-1 col-md-1 col-xs-1"><div class="center-txt">1 col</div></div>
+    <div class="col-lg-1 col-md-1 col-xs-1"><div class="center-txt">1 col</div></div>
   </div>
   <div class="container clearfix">
-    <div class="col-12"><div class="center-txt">12 col</div></div>
+    <div class="col-lg-12 col-md-12 col-xs-12"><div class="center-txt">12 col</div></div>
   </div>
   <div class="container clearfix">
-    <div class="col-8"><div class="center-txt">8 col</div></div>
-    <div class="col-2"><div class="center-txt">2 col</div></div>
-    <div class="col-2"><div class="center-txt">2 col</div></div>
+    <div class="col-lg-8 col-md-8 col-xs-8"><div class="center-txt">8 col</div></div>
+    <div class="col-lg-2 col-md-2 col-xs-2"><div class="center-txt">2 col</div></div>
+    <div class="col-lg-2 col-md-2 col-xs-2"><div class="center-txt">2 col</div></div>
   </div>
   <div class="container clearfix">
-    <div class="col-1"><div class="center-txt">1 col</div></div>
-    <div class="col-2"><div class="center-txt">2 col</div></div>
-    <div class="col-2"><div class="center-txt">2 col</div></div>
-    <div class="col-6"><div class="center-txt">6 col</div></div>
-    <div class="col-1"><div class="center-txt">1 col</div></div>
+    <div class="col-lg-1 col-md-1 col-xs-1"><div class="center-txt">1 col</div></div>
+    <div class="col-lg-2 col-md-2 col-xs-2"><div class="center-txt">2 col</div></div>
+    <div class="col-lg-2 col-md-2 col-xs-2"><div class="center-txt">2 col</div></div>
+    <div class="col-lg-6 col-md-6 col-xs-6"><div class="center-txt">6 col</div></div>
+    <div class="col-lg-1 col-md-1 col-xs-1"><div class="center-txt">1 col</div></div>
   </div>
   <div class="container clearfix">
-    <div class="col-6">
+    <div class="col-lg-6 col-md-6 col-xs-6">
       <div class="container container-nested clearfix">
-        <div class="col-2 nested"><div class="center-txt">Nested 2 col</div></div>
-        <div class="col-2 nested"><div class="center-txt">Nested 2 col</div></div>
-        <div class="col-8 nested"><div class="center-txt">Nested 8 col</div></div>
+        <div class="col-lg-2 col-md-2 col-xs-2 nested"><div class="center-txt">Nested 2 col</div></div>
+        <div class="col-lg-2 col-md-2 col-xs-2 nested"><div class="center-txt">Nested 2 col</div></div>
+        <div class="col-lg-8 col-md-8 col-xs-8 nested"><div class="center-txt">Nested 8 col</div></div>
       </div>
     </div>
-    <div class="col-6">
+    <div class="col-lg-6 col-md-6 col-xs-6">
       <div class="container container-nested clearfix">
-        <div class="col-6 nested"><div class="center-txt">Nested 6 col</div></div>
-        <div class="col-6 nested"><div class="center-txt">Nested 6 col</div></div>
+        <div class="col-lg-6 col-md-6 col-xs-6 nested"><div class="center-txt">Nested 6 col</div></div>
+        <div class="col-lg-6 col-md-6 col-xs-6 nested"><div class="center-txt">Nested 6 col</div></div>
       </div>
     </div>
   </div>
